--- a/borders.css
+++ b/borders.css
@@ -1,19 +1,39 @@
 
 body[class="demo1"]{
+  position:absolute;
+  width:100%;
   background-color: #E67E22;
 }
 
 body[class="demo2"]{
+	position:absolute;
+	width:100%;
+	position:fixed;
 	background-color:#2980B9;
 }
 
 h1{
   position:relative;
-  margin-left:25%;
-  margin-top:15%;
   line-height:2em;
-  font-size:3em;
+  font-size:1.5em;
+  margin-left:10%;
   color:white;
+}
+
+nav{
+	position:relative;
+	width:890px;
+	margin:auto;
+	padding-top:100px;
+}
+
+nav>#text {
+	position:relative;
+	min-width:710px;
+	margin:auto;
+	line-height:2em;
+	font-size:1.5em;
+	color:white;	
 }
 
 
@@ -22,8 +42,8 @@ nav a{
 	height:15em;
 	border:5px solid black;
 	border-radius:5%;
-	margin-left:25%;
-	font-size:4em;
+	margin-left:20%;
+	font-size:2.5em;
 	text-decoration:none;
 	color:black;
 }
@@ -111,36 +131,36 @@ left:22px;
 }
 
 body[class="demo1"] label{
-	position:absolute;
+	position:fixed;
 	height:3em;
 	width:55px;
-	bottom:2em;
+	bottom:50px;
 	cursor:pointer;
 }
 
 body[class="demo2"] label{
-	position:absolute;
-	bottom:2em;
+	position:fixed;
+	bottom:50px;
 	height:3em;
 	width:55px;
-	left:50%;	
+	left:48%;	
 }
 
 body[class="demo2"] label:hover{
 	cursor:pointer;
 }
 
-body[class="demo2"] #menu:checked ~ label:hover div{
+body[class="demo2"] #menu:checked + div > label:hover div{
 	background-color:#2980B9;
 
 }
 
-body[class="demo2"] #menu:checked ~ label:hover div:after{
+body[class="demo2"] #menu:checked + div > label:hover div:after{
 	background-color:#2980B9;
 	top:-15px;
 }
 
-body[class="demo2"] #menu:checked ~ label:hover div:before{
+body[class="demo2"] #menu:checked + div > label:hover div:before{
 	background-color:#2980B9;
 	top:15px;
 }
@@ -183,7 +203,7 @@ left:0em;
 }
 
 body[class="demo2"] #menu:checked + .backGround{
-	border-width: 30px 30px 100px 30px;
+	border-width: 30px 38px 100px 30px;
 }
 
 
@@ -205,7 +225,7 @@ img{
 
 body[class="demo1"] ul{
 	position:absolute;
-	top:50%;
+	top:30%;
 	left:-6em;
 	list-style:none;
     z-index:10;	
@@ -259,8 +279,8 @@ body[class="demo1"] #menu:checked + .backGround ul li{
 
 body[class="demo2"] ul:nth-of-type(1){
 	position:absolute;
-	bottom:-3.5em;
-	left:26%;
+	bottom:-3em;
+	right:60%;
 	font-size:1.5em;
 	color:white;
 	list-style:none;
@@ -269,8 +289,9 @@ body[class="demo2"] ul:nth-of-type(1){
 
 body[class="demo2"] ul:nth-of-type(2){
 	position:absolute;
-	bottom:-3.5em;
-	left:54%;
+	bottom:-3em;
+	left:60%;
+	width:360px;
 	font-size:1.5em;
 	color:white;
 	list-style:none;
@@ -279,7 +300,7 @@ body[class="demo2"] ul:nth-of-type(2){
 body[class="demo2"] ul li{
 	position:relative;
 	display:inline;
-	margin-right:2em;
+	margin-right:1em;
 
 }
 
